--- a/src/app/pages/coordinador/cursos-intersemestrales/gestionar-cursos/gestionar-cursos.component.html
+++ b/src/app/pages/coordinador/cursos-intersemestrales/gestionar-cursos/gestionar-cursos.component.html
@@ -154,6 +154,13 @@
         <td mat-cell *matCellDef="let curso">
           <div class="acciones-container">
             <button mat-icon-button 
+                    (click)="abrirDialogEstudiantes(curso)"
+                    matTooltip="Ver estudiantes del curso"
+                    class="btn-estudiantes">
+              <mat-icon>people</mat-icon>
+            </button>
+            
+            <button mat-icon-button 
                     *ngIf="puedeEditar(curso)"
                     (click)="abrirDialogEditar(curso)"
                     matTooltip="Editar curso"
