--- a/src/app/shared/components/estudiantes-curso-dialog/estudiantes-curso-dialog.component.html
+++ b/src/app/shared/components/estudiantes-curso-dialog/estudiantes-curso-dialog.component.html
@@ -81,9 +81,9 @@
           <ng-container matColumnDef="tipo">
             <th mat-header-cell *matHeaderCellDef>Tipo</th>
             <td mat-cell *matCellDef="let estudiante">
-              <mat-chip [style.background-color]="getTipoColor(estudiante.tipo)" [style.color]="'white'">
+              <span class="estado-texto">
                 {{ estudiante.tipo }}
-              </mat-chip>
+              </span>
             </td>
           </ng-container>
 
@@ -91,9 +91,7 @@
           <ng-container matColumnDef="estado_preinscripcion">
             <th mat-header-cell *matHeaderCellDef>Estado Preinscripción</th>
             <td mat-cell *matCellDef="let estudiante">
-              <span *ngIf="estudiante.estado_preinscripcion" 
-                    class="estado-badge"
-                    [style.background-color]="getEstadoColor(estudiante.estado_preinscripcion)">
+              <span *ngIf="estudiante.estado_preinscripcion" class="estado-texto">
                 {{ estudiante.estado_preinscripcion }}
               </span>
               <span *ngIf="!estudiante.estado_preinscripcion" class="sin-estado">-</span>
@@ -104,12 +102,9 @@
           <ng-container matColumnDef="estado_inscripcion">
             <th mat-header-cell *matHeaderCellDef>Estado Inscripción</th>
             <td mat-cell *matCellDef="let estudiante">
-              <span *ngIf="estudiante.tiene_inscripcion && estudiante.estado_inscripcion" 
-                    class="estado-badge"
-                    [style.background-color]="getEstadoColor(estudiante.estado_inscripcion)">
-                {{ estudiante.estado_inscripcion }}
+              <span class="estado-texto">
+                {{ estudiante.estado_inscripcion || 'Sin inscripción' }}
               </span>
-              <span *ngIf="!estudiante.tiene_inscripcion" class="sin-estado">Sin inscripción</span>
             </td>
           </ng-container>
 
