--- a/src/app/pages/common/historial-completo/historial-completo.component.html
+++ b/src/app/pages/common/historial-completo/historial-completo.component.html
@@ -115,11 +115,19 @@
           </td>
         </ng-container>
 
+        <!-- Columna Categoría -->
+        <ng-container matColumnDef="categoria">
+          <th mat-header-cell *matHeaderCellDef>Categoría</th>
+          <td mat-cell *matCellDef="let solicitud">
+            <span class="categoria-texto">{{ solicitud.categoria || 'Otro' }}</span>
+          </td>
+        </ng-container>
+
         <!-- Columna Tipo -->
         <ng-container matColumnDef="tipo_solicitud">
           <th mat-header-cell *matHeaderCellDef>Tipo</th>
           <td mat-cell *matCellDef="let solicitud">
-            <mat-chip class="tipo-chip">{{ solicitud.tipo_solicitud_display || detectarTipoSolicitud(solicitud.nombre_solicitud) }}</mat-chip>
+            <span class="tipo-texto">{{ solicitud.tipo_solicitud || solicitud.tipo_solicitud_display || detectarTipoSolicitud(solicitud.nombre_solicitud) }}</span>
           </td>
         </ng-container>
 
