--- a/src/app/pages/common/historial-completo/historial-completo.component.html
+++ b/src/app/pages/common/historial-completo/historial-completo.component.html
@@ -168,7 +168,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns; trackBy: trackBySolicitudId"></tr>
       </table>
 
       <!-- Mensaje cuando no hay solicitudes -->
